latest sonar, sonar fixes